fix: avoid cropped labels on long attribute values

--- a/src/components/ToolMenu/FeatureInfo/FeaturePropertyGrid/index.less
+++ b/src/components/ToolMenu/FeatureInfo/FeaturePropertyGrid/index.less
@@ -25,6 +25,11 @@
 
           .ant-table-body {
             overflow: auto !important;
+
+            td {
+              word-break: break-word;
+              white-space: pre-line;
+            }
           }
 
           .ant-table-container {
